# python-energyzero

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .yamllint  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  test_output.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  labels.yml  release-drafter.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: codeql.yaml  dependency-review.yaml  labels.yaml  linting.yaml  lock.yaml  pr-labels.yaml  release-drafter.yaml  release.yaml  requirements.txt  scoreboard.yaml  stale.yaml  sync-labels.yaml  tests.yaml  tweet-release.yaml  typing.yaml
energyzero/: __init__.py  energyzero.py  exceptions.py  models.py
examples/: energy.py  gas.py  prices_list.py  test_output.py
examples/graphql/: __init__.py  electricity.py  gas.py  prices_list.py
examples/legacy/: __init__.py  electricity.py  electricity_prices.py  gas.py  gas_prices.py  prices_list.py
examples/rest/: __init__.py  electricity.py  electricity_hourly.py  gas.py  prices_list.py
src/energyzero/: __init__.py  const.py  energyzero.py  exceptions.py  models.py
src/energyzero/api/: __init__.py  base.py  graphql.py  rest.py
tests/: __init__.py  conftest.py  test_energypriceblock.py  test_energyzero.py  test_exceptions.py  test_graphql_models.py  test_legacy_models.py  test_models.py  test_rest_api.py
tests/__snapshots__/: test_graphql_models.ambr  test_legacy_models.ambr  test_models.ambr
tests/fixtures/: energy.json  energy_ex_no_prices.json  gas.json  gas_ex.json  no_data.json
tests/fixtures/graphql/: energy.json  gql_error.json
tests/fixtures/legacy/: energy.json
tests/fixtures/rest/: electricity_hour_response.json  electricity_quarter_response.json  error_response.json  gas_day_response.json
