[project]
name = "energyzero"
version = "0.0.0"
description = "Asynchronous Python client providing energy/gas prices from EnergyZero"
authors = [{ name="Klaas Schoute", email="<hello@student-techlife.com>"}]
maintainers = [{name="Klaas Schoute", email="<hello@student-techlife.com>"}]
license = "MIT"
requires-python = ">=3.12"
readme = "README.md"
keywords = ["energy", "energyzero", "gas", "prices", "api", "async", "client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]
packages = [
  { include = "energyzero", from = "src"},
]

[tool.poetry.dependencies]
aiohttp = ">=3.0.0"
python = "^3.12"
yarl = ">=1.6.0"

[project.urls]
homepage = "https://github.com/klaasnicolaas/python-energyzero"
repository = "https://github.com/klaasnicolaas/python-energyzero"
documentation = "https://github.com/klaasnicolaas/python-energyzero"
"Bug Tracker" = "https://github.com/klaasnicolaas/python-energyzero/issues"
Changelog = "https://github.com/klaasnicolaas/python-energyzero/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.4.1"
covdefaults = "2.3.0"
coverage = {version = "7.13.1", extras = ["toml"]}
pre-commit-hooks = "6.0.0"
prek = "0.2.30"
pylint = "4.0.4"
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"
pytest-freezer = "0.4.9"
pytz = "2025.2"
ruff = "0.14.13"
syrupy = "5.0.0"
ty = "0.0.12"
types-pytz = "2025.2.0.20251108"
yamllint = "1.38.0"
zizmor = "1.20.0"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["energyzero"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T"]

[tool.pylint."MESSAGES CONTROL"]
disable= [
  "duplicate-code",
  "format",
  "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
  "ANN401",  # Opinionated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful
  "SLOT000", # Has a bug with enums: https://github.com/astral-sh/ruff/issues/5748

  # Conflicts with the Ruff formatter
  "COM812",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["energyzero"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
