[project]
name = "energyzero"
version = "0.0.0"
description = "Asynchronous Python client providing energy/gas prices from EnergyZero"
authors = [{ name="Klaas Schoute", email="<hello@student-techlife.com>"}]
maintainers = [{name="Klaas Schoute", email="<hello@student-techlife.com>"}]
license = "MIT"
requires-python = ">=3.12,<4.0"
readme = "README.md"
keywords = ["energy", "energyzero", "gas", "prices", "api", "async", "client"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: AsyncIO",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["dependencies"]
packages = [
  { include = "energyzero", from = "src"},
]
dependencies = [
  "aiohttp (>=3.13.5,<4.0.0)",
  "yarl (>=1.23.0,<2.0.0)",
]

[tool.poetry]
requires-poetry = '>=2.0'

[project.urls]
homepage = "https://github.com/klaasnicolaas/python-energyzero"
repository = "https://github.com/klaasnicolaas/python-energyzero"
documentation = "https://github.com/klaasnicolaas/python-energyzero"
"Bug Tracker" = "https://github.com/klaasnicolaas/python-energyzero/issues"
Changelog = "https://github.com/klaasnicolaas/python-energyzero/releases"

[tool.poetry.group.dev.dependencies]
aresponses = "3.0.0"
codespell = "2.4.2"
covdefaults = "2.3.0"
coverage = {version = "7.13.5", extras = ["toml"]}
pre-commit-hooks = "6.0.0"
prek = "0.3.11"
pylint = "4.0.5"
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-cov = "7.1.0"
pytest-freezer = "0.4.9"
ruff = "0.15.12"
syrupy = "5.1.0"
ty = "0.0.33"
yamllint = "1.38.0"
zizmor = "1.24.1"

[tool.coverage.run]
plugins = ["covdefaults"]
source = ["energyzero"]

[tool.coverage.report]
show_missing = true
fail_under = 95

[tool.ty.environment]
python-version = "3.12"

[tool.pylint.MASTER]
ignore = ["tests"]

[tool.pylint.BASIC]
good-names = ["_", "ex", "fp", "i", "id", "j", "k", "on", "Run", "T", "wv"]

[tool.pylint."MESSAGES CONTROL"]
disable = ["too-few-public-methods", "duplicate-code", "format", "unsubscriptable-object"]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 88

[tool.pylint.DESIGN]
max-attributes = 20

[tool.pytest.ini_options]
addopts = "--cov"
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
  "ANN401",  # Opinionated warning on disallowing dynamically typed expressions
  "D203",    # Conflicts with other rules
  "D213",    # Conflicts with other rules
  "D417",    # False positives in some occasions
  "PLR2004", # Just annoying, not really useful

  # Conflicts with the Ruff formatter
  "COM812",
  "ISC001",
]

[tool.ruff.lint.flake8-pytest-style]
mark-parentheses = false
fixture-parentheses = false

[tool.ruff.lint.isort]
known-first-party = ["energyzero"]

[tool.ruff.lint.mccabe]
max-complexity = 25

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
